[package]
name = "billt"
version = "0.0.0"
authors = ["ryn"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.25.0"
crossterm = "0.27.0"
tui-input = "0.8"
open = "5.0.1"
chrono = { version= "0.4", features = ["serde"] }
csv = "1.3.0"
